# flashscore-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  INDICE DE MCP.txt  LICENSE  PresuntaGUIAmcp_flashscore.md  README.md  manifest.json  pyproject.toml
.github/workflows/: deploy-hfspace-fast.yml  deploy-hfspace.yml  precache.yml  publish-image.yml  test.yml
.swarm/identities/: daily-coder.md
.swarm/memory/: index.md  learnings.jsonl
cloud/: .dockerignore  Dockerfile  Dockerfile.fast  README.md  docker-compose.yml  fly.toml
docs/: ARCHITECTURE.md  INSTALACION.md  TUTORIAL-USO.md  clientes-windows.md  deploy-cloud.md  troubleshooting.md
examples/: claude_desktop_config.json
scripts/: _show_detail.py  _show_live.py  bench.py  bench_provider.py  compare_lineups_states.py  compare_two_matches.py  create-desktop-shortcuts.ps1  debug_flashscore_controls.py  debug_flashscore_date_click.py  debug_flashscore_dates.py  debug_flashscore_dom.py  debug_flashscore_section_urls.py  debug_lineups_dom.py  debug_match_detail.py  install.ps1  precache.py  register-codex-mcp.ps1  register-vscode-mcp.ps1  run-http.ps1  run-stdio.ps1  smoke-core.ps1  smoke_flashscore.py  smoke_official_flashscore.py  smoke_wolfsburg_paderborn.py  start-flashscore-mcp.ps1  status-flashscore-mcp.ps1  stop-flashscore-mcp.ps1
src/flashscore_mcp/: __init__.py  browser_pool.py  cache.py  config.py  models.py  server.py
src/flashscore_mcp/providers/: __init__.py  base.py  factory.py  flashscore.py  (+2 more)
tests/: test_cache.py  test_flashscore_fast.py  test_poller.py  test_resources.py  test_settings.py
(+2 files in other folders)
