[project]
name = "flashscore-live-mcp"
version = "0.1.1"
description = "Servidor MCP para consultar marcadores deportivos en vivo con cache y proveedor Flashscore experimental."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.10.0",
    "playwright>=1.45.0,<1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
flashscore-mcp = "flashscore_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flashscore_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
